# vehicle_captain_routing_core

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  DOCKER_BUILD_INFRASTRUCTURE.md  Makefile  README.md  USAGE_GUIDE.md  build_images.sh  config.md  docker-dev-build-and-run.sh  main.cpp
Dockerfiles/: Dockerfile.remote-cpp-env  Dockerfile_compile  Dockerfile_compile_paho_armv8  Dockerfile_compile_paho_x64  Dockerfile_run  compile.sh
ITSG5-Protocol-SDK-ARMv7a-v1.13-dummy/: CMakeLists.txt
ITSG5-Protocol-SDK-ARMv8a-v1.13-dummy/: CMakeLists.txt
ITSG5-Protocol-SDK-v1.13-dummy/: CMakeLists.txt
ITSG5-Protocol-SDK-v1.13-dummy/include/itsg5_sdk/: unex_v2xcast_files_go_here.h
docu/: 20_software_design.drawio  21_platform_design.drawio  CONFIGURATION.md  USAGE_GUIDE.md
docu/flowcharts/: README.md  Threading_detailed.drawio  Threading_overview.drawio
util/: CMakeLists.txt
util/include/util/: ThreadsafeQueue.h
util/include/util/encoder/: base64.h
util/include/util/exceptions/: NotConfiguredException.h  NotImplementedException.h  StillUpException.h  V2XPlatformExceptions.h
util/include/util/interfaces/: Configurable.h  NonAssignable.h  Stoppable.h
util/include/util/logger/: ClassStandardOutputLogger.h  ExperimentalOutputLogger.h  LoggingFacility.h  StandardOutputLogger.h
util/include/util/v2x_backend/: V2XDefines.h
util/src/v2x_backend/: V2XDefines.cpp
v2x_interface_control/: CMakeLists.txt
v2x_interface_control/include/v2x_interface_control/: MQTTInterfaceConnection.h  UnexITSG5InterfaceConnection.h  V2XInterfaceConnection.h
v2x_interface_control/src/: MQTTInterfaceConnection.cpp  UnexITSG5InterfaceConnection.cpp  V2XInterfaceConnection.cpp
v2x_io_control/: CMakeLists.txt
v2x_io_control/include/v2x_io_control/: CommunicationControl.h  InputHandlingStrategy.h  OutputHandlingStrategy.h
v2x_io_control/include/v2x_io_control/input_handling_strategies/: ZmqSimpleInputHandlingStrategy.h
v2x_io_control/include/v2x_io_control/output_handling_strategies/: ZmqSimpleOutputHandlingStrategy.h
v2x_io_control/src/: CommunicationControl.cpp  InputHandlingStrategy.cpp  OutputHandlingStrategy.cpp
v2x_io_control/src/input_handling_strategies/: ZmqSimpleInputHandlingStrategy.cpp
v2x_io_control/src/output_handling_strategies/: ZmqSimpleOutputHandlingStrategy.cpp
v2x_routing/: CMakeLists.txt
v2x_routing/include/v2x_routing/: V2XRoutingControl.h
v2x_routing/include/v2x_routing/zmq/: BaseZmqRoutingControl.h  LightWeightZmqRoutingControl.h
v2x_routing/src/: V2XRoutingControl.cpp
v2x_routing/src/zmq/: BaseZmqRoutingControl.cpp  LightWeightZmqRoutingControl.cpp
vcits/vcits/: CMakeLists.txt
vcits/vcits/asn1c/: CMakeLists.txt
vcits/vcits/cam/: CMakeLists.txt
vcits/vcits/cpm/: CMakeLists.txt
vcits/vcits/denm/: CMakeLists.txt
vcits/vcits/exceptions/: CMakeLists.txt
vcits/vcits/ivim/: CMakeLists.txt
vcits/vcits/mapem/: CMakeLists.txt
vcits/vcits/parser/: CMakeLists.txt
vcits/vcits/rtcmem/: CMakeLists.txt
vcits/vcits/spatem/: CMakeLists.txt
vcits/vcits/srem/: CMakeLists.txt
vcits/vcits/ssem/: CMakeLists.txt
vcits/vcits/vccontainer/: CMakeLists.txt
